# auditoria-gov

./: .env.example  .env.merged  .env.production.example  .env.runtime  .env.runtime.override  .gitattributes  .gitignore  .import-linter  .mcp.json  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETE_DEPLOYMENT_GUIDE.md  COMPLETION_STATUS.md  CONTRIBUTING.md  CROSS_PLATFORM_SETUP.md  DELIVERY_SUMMARY.md  FINAL_DELIVERY_REPORT.md  GOVERNANCE_DEPLOYMENT.md  INCIDENT_REPORT.md  INDEX.md  LICENSE  LICENSE-BSL  LOCAL_SETUP.md  MASTER_EXECUTION_CHECKLIST.md  Makefile  NOTICE-BSL  README.md  SECURITY.md  SPLIT_READY_DELIVERY_REPORT.md  SPONSORS.md  TASK_COMPLETION_CERTIFICATE.md  WORKFLOW_QUICK_REF.md  docker-compose.dev-lite.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-workspace.yaml  pyproject.toml  turbo.json
.claude/: settings.json
.claude/rules/: coding.md  (+1 more)
.github/: CODEOWNERS  FUNDING.yml  copilot-instructions.md  pull_request_template.md
api/: Dockerfile  alembic.ini  core_client.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_init.py  0002_ingest_state_and_coverage.py  0003_baselines.py  0004_add_performance_indexes.py  0005_incremental_er.py  0006_signal_dedup_key.py  0007_robustness_foundations.py  0008_add_remaining_performance_indices.py  0009_typology_run_log.py  0010_reference_data.py  0011_provenance_link_tables.py  0012_backfill_provenance_links.py  0013_source_veracity.py  0014_pg_trgm_entity_search.py  0015_ingest_state_yield_requested.py  0016_raw_source_monthly_partitions.py  0017_signal_evidence.py  0018_legal_violation_hypothesis.py  0019_case_type.py  0020_add_updated_at_to_new_tables.py  0021_dispensa_thresholds.py  0022_signal_confidence_score.py  0023_rename_confidence_data_completeness.py  0024_contestation_extend.py  2a85d83fddb3_er_confidence_shield.py
api/app/: db.py  deps.py  main.py
api/app/adapters/: __init__.py  core_adapter.py  split_ready_adapter.py
api/app/middleware/: cache.py  rate_limit.py  security_events.py
api/app/routers/: internal.py  public.py
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0002_ingest_state_and_coverage.py  0008_add_remaining_performance_indices.py  0010_reference_data.py  0011_provenance_link_tables.py  0013_source_veracity.py  0015_ingest_state_yield_requested.py  0016_raw_source_monthly_partitions.py  0018_legal_violation_hypothesis.py  0019_case_type.py  0020_add_updated_at_to_new_tables.py  0022_signal_confidence_score.py  2a85d83fddb3_er_confidence_shield.py
apps/api/app/: deps.py  main.py
apps/api/app/middleware/: cache.py  rate_limit.py  security_events.py
apps/api/app/routers/: internal.py  public.py
core/ai/: pyproject.toml
core/ai/openwatch_ai/: __init__.py  classify.py  embeddings.py  explain.py  provider.py  rag.py
core/analytics/: pyproject.toml
core/analytics/openwatch_analytics/: risk_score.py
core/baselines/: pyproject.toml
core/baselines/openwatch_baselines/: __init__.py  compute.py
core/er/: pyproject.toml
core/er/openwatch_er/: __init__.py  clustering.py  corporate_edges.py  edges.py  matching.py  normalize.py
core/pipelines/: Dockerfile  pyproject.toml  run_pipeline.py  worker_app.py
core/pipelines/openwatch_pipelines/: __init__.py  ai_tasks.py  backfill_cpf.py  baseline_tasks.py  case_tasks.py  compliance_tasks.py  coverage_tasks.py  er_tasks.py  ingest_tasks.py  maintenance_tasks.py  normalize_tasks.py  reference_tasks.py  signal_tasks.py
core/queries/: pyproject.toml
core/queries/openwatch_queries/: __init__.py  queries.py
core/scheduler/: pyproject.toml
core/scheduler/openwatch_scheduler/: schedule.py
core/services/: pyproject.toml
core/services/openwatch_services/: alerts.py  case_builder.py  infra_alerts.py  legal_inference.py  reference_seed.py
core/typologies/: pyproject.toml
core/typologies/openwatch_typologies/: __init__.py  base.py  factor_metadata.py  registry.py  t01_concentration.py  t02_low_competition.py  t03_splitting.py  t04_amendments_outlier.py  t05_price_outlier.py  t06_shell_company_proxy.py  t07_cartel_network.py  t08_sanctions_mismatch.py  t09_ghost_payroll_proxy.py  t10_outsourcing_parallel_payroll.py  t11_spreadsheet_manipulation.py  t12_directed_tender.py  t13_conflict_of_interest.py  t14_compound_favoritism.py  t15_false_sole_source.py  t16_budget_clientelism.py  t17_layered_money_laundering.py  t18_illegal_position_accumulation.py  t19_bid_rotation.py  t20_phantom_bidders.py  t21_collusive_cluster.py  t22_political_favoritism.py  t23_bim_cost_overrun.py  t24_me_epp_quota_fraud.py  t25_tcu_condemned.py  t26_state_penalty_mismatch.py  t27_bndes_loan_nexus.py  t28_judicial_precedent_warning.py
docs/: 2026-03-02-01-corrupcao-legal-first.md  2026-03-02-02-corrupcao-engineer-first.md  2026-03-02-03-comparativo-codebase-analise-dados-ingeridos.md  2026-03-02-deteccao-corrupcao-esferas-tipos.md  ARCHITECTURE.md  COMPLIANCE.md  COST.md  DEPLOYMENT.md  GITHUB_GOVERNANCE.md  GITHUB_ORG_SETUP.md  GOVERNANCE.md  GOVERNANCE_CHECKLIST.md  GOVERNANCE_SETUP_SUMMARY.md  OPEN_CORE_STRATEGY.md  PUBLIC_PRIVATE_BOUNDARY_REVIEW.md  SIGNAL_LENS_REFACTOR_PLAN.md  TYPOLOGY_AUDIT.md  api-keys.md  branch-protection.json
scripts/: detect-resources.js
shared/: config.py  db.py  db_sync.py  logging.py
tests/: conftest.py  test_config.py
tools/: PROMPTS.md  SCRIPTS.md  TEMPLATES.md  check_boundaries.py  coverage_self_heal_agent.py  deploy_governance_full.sh  dev_setup.sh  setup_github_governance.sh  setup_org.sh  setup_project_board.sh  setup_remotes.sh  split_repo.sh  split_repo_preflight.sh
web/: Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
worker/: Dockerfile  docker-entrypoint.sh  pyproject.toml  run_pipeline.py  worker_app.py
worker/tasks/: __init__.py  ai_tasks.py  backfill_cpf.py  baseline_tasks.py  case_tasks.py  compliance_tasks.py  coverage_tasks.py  er_tasks.py  ingest_tasks.py  maintenance_tasks.py  normalize_tasks.py  reference_tasks.py  signal_tasks.py
(+628 files in other folders)
