[project]
name = "auditoria-api"
version = "0.1.0"
description = "OpenWatch API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "redis>=5.2",
    "celery>=5.4",
    "httpx>=0.28",
    "structlog>=24.4",
    "pgvector>=0.3",
    "openai>=1.60",
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
