[project]
name = "auditoria-worker"
version = "0.1.0"
description = "AuditorIA Gov Celery Worker"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4",
    "redis>=5.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "structlog>=24.4",
    "pgvector>=0.3",
    "openai>=1.60",
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
