[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openwatch-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openwatch-models",
    "openwatch-db",
    "openwatch-config",
    "openwatch-utils",
    "openwatch-connectors",
    "openwatch-queries",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "alembic>=1.14",
    "redis[hiredis]>=5.0",
    "celery[redis]>=5.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
