[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openwatch-ai"
version = "0.1.0"
requires-python = ">=3.12"
# ⛔ PRIVATE — never publish to PyPI
dependencies = [
    "openwatch-models",
    "openwatch-config",
    "openai>=1.60",
    "anthropic>=0.40",
    "jinja2>=3.1",
    "pgvector>=0.3",
]
[project.optional-dependencies]
nlp = [
    "transformers>=4.40",
    "torch>=2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["openwatch_ai"]

[tool.uv.sources]
openwatch-models = { workspace = true }
openwatch-config = { workspace = true }
