[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openwatch-analytics"
version = "0.1.0"
requires-python = ">=3.12"
# ⛔ PRIVATE — never publish to PyPI
dependencies = [
    "openwatch-models",
    "openwatch-config",
    "openwatch-utils",
    "scipy>=1.12",
    "numpy>=1.26",
]

[tool.hatch.build.targets.wheel]
packages = ["openwatch_analytics"]
