[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openwatch-er"
version = "0.1.0"
requires-python = ">=3.12"
# ⛔ PRIVATE — never publish to PyPI
dependencies = [
    "openwatch-models",
    "openwatch-config",
    "openwatch-utils",
    "rapidfuzz>=3.0.0",
    "networkx>=3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["openwatch_er"]

[tool.uv.sources]
    openwatch-config = { workspace = true }
    openwatch-models = { workspace = true }
    openwatch-utils = { workspace = true }
