[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openwatch-pipelines"
version = "0.1.0"
requires-python = ">=3.12"
# ⛔ PRIVATE — never publish to PyPI
dependencies = [
    "openwatch-models",
    "openwatch-db",
    "openwatch-config",
    "openwatch-utils",
    "openwatch-connectors",
    "openwatch-typologies",
    "openwatch-er",
    "openwatch-analytics",
    "openwatch-baselines",
    "openwatch-services",
    "openwatch-ai",
    "openwatch-queries",
    "celery[redis]>=5.4",
    "redis>=5.2",
]

[tool.hatch.build.targets.wheel]
packages = ["openwatch_pipelines"]
