[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openwatch-queries"
version = "0.1.0"
requires-python = ">=3.12"
# ⛔ PRIVATE — never publish to PyPI
dependencies = [
    "openwatch-models",
    "openwatch-db",
    "openwatch-config",
    "openwatch-analytics",
    "sqlalchemy[asyncio]>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["openwatch_queries"]

[tool.uv.sources]
    openwatch-analytics = { workspace = true }
    openwatch-config = { workspace = true }
    openwatch-db = { workspace = true }
    openwatch-models = { workspace = true }
