[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openwatch-scheduler"
version = "0.1.0"
requires-python = ">=3.12"
# ⛔ PRIVATE — never publish to PyPI
dependencies = [
    "openwatch-config",
    "openwatch-pipelines",
    "celery[redis]>=5.4",
]

[tool.hatch.build.targets.wheel]
packages = ["openwatch_scheduler"]
