[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openwatch-typologies"
version = "0.1.0"
requires-python = ">=3.12"
# ⛔ PRIVATE — never publish to PyPI
dependencies = [
    "openwatch-models",
    "openwatch-db",
    "openwatch-config",
    "openwatch-utils",
    "rapidfuzz>=3.0.0",
    "networkx>=3.2",
    "scipy>=1.12",
    "numpy>=1.26",
]

[tool.hatch.build.targets.wheel]
packages = ["openwatch_typologies"]
